# podcast-recorder

./: .clippy.toml  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  deploy-cloudflare.yml  release.yml
.husky/: commit-msg
apps/auth/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/auth/scripts/: create-member.mjs
apps/auth/src/: index.ts
apps/desktop/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  capabilities.json  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/recording/: encoder.rs  mod.rs  recorder.rs  storage.rs  track.rs  types.rs
apps/desktop/src/components/: AudioVisualizer.css  AudioVisualizer.tsx  Button.css  Button.tsx  DeviceSelector.tsx  ErrorBoundary.tsx  Layout.css  Layout.tsx  Navigation.css  Navigation.tsx  PreJoinScreen.css  PreJoinScreen.tsx  ProtectedRoute.tsx  UpdateChecker.css  UpdateChecker.tsx  index.ts
apps/desktop/src/components/ui/: AbstractBackground.css  Button.css  Button.tsx  Input.css  Input.tsx
apps/desktop/src/hooks/: useCloudfareCalls.ts  useMediaRecorder.ts  useVideoCapabilities.ts
apps/desktop/src/lib/: CloudflareCalls.ts  PeerManager.ts  SignalingClient.ts  WebRTCManager.ts  recording.ts  signalingApi.ts  tauri.ts  tauriStorage.ts  videoQualityPresets.ts
apps/desktop/src/pages/: CreateRoomPage.css  CreateRoomPage.tsx  HomePage.css  HomePage.tsx  JoinRoomPage.css  JoinRoomPage.tsx  MediaTest.tsx  NotFoundPage.css  NotFoundPage.tsx  RecordingPage.css  RecordingPage.tsx  RoomPage.css  RoomPage.tsx  SettingsPage.css  SettingsPage.tsx  TestPeerManager.css  TestPeerManager.tsx  TestPreJoin.tsx
apps/desktop/src/stores/: README.md  index.ts  recordingStore.ts  roomStore.ts  settingsStore.ts
apps/desktop/src/styles/: global.css
apps/signaling/: .env.example  Cargo.toml  README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/signaling/src/: config.rs  handlers.rs  index.ts  main.rs  models.rs  routes.rs  shutdown.rs  storage.rs  websocket.rs
signaling-server/: package.json  worker-configuration.d.ts  wrangler.jsonc
signaling-server/src/: index.ts
