[package]
name = "podcast-recorder-signaling"
version = "0.1.0"
edition = "2021"
authors = ["Ugo ROSERAT"]
description = "WebRTC signaling server for podcast recorder"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Security
jsonwebtoken = "9.2"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }