[package]
name = "podcast-recorder-desktop"
version = "0.1.0"
description = "Podcast Recorder Desktop Application"
authors = ["Ugo ROSERAT"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Recording dependencies
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
